--- a/.github/workflows/update-readme.yml
+++ b/.github/workflows/update-readme.yml
@@ -8,10 +8,9 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
-    name: Update the README with recent activity
 
     steps:
       - uses: actions/checkout@v2
-      - uses: ${{ secrets.UPDATE_README_WORKFLOW }}
+      - uses: jamesgeorge007/github-activity-readme@master
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
