--- a/.github/workflows/update-activity.yml
+++ b/.github/workflows/update-activity.yml
@@ -8,12 +8,11 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
+    permissions:
+      contents: write
 
     steps:
-      - uses: actions/checkout@v2
-      - uses: canaytore/activity-box@master
+      - uses: actions/checkout@v3
+      - uses: jamesgeorge007/github-activity-readme@master
         env:
-          GH_PAT: ${{ secrets.GH_PAT }}
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          GH_USERNAME: canaytore
-          GIST_ID: 84650f212ec6b057d1aec6ea448b29d9
